--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -402,7 +402,13 @@ ul.alert-dropdown {
     } 
     &-options-default {
         display: none;
-    }   
+    }       
+}
+
+.grid-row-no-records {
+    text-align: center;
+    font-size: 36px;   
+    padding: 100px 0px;
 }
 
 /** Pager */
