--- a/templates/dashboard/pages/manageDriver.html
+++ b/templates/dashboard/pages/manageDriver.html
@@ -11,6 +11,6 @@
 {{{{/raw-helper}}}}
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();console.log(e),FORM_HELPER.draw(".manage-driver-content",e,{postUrl:"drivers/service/manageDriver",callbacks:{afterSubmit:function(){MENU_HELPER.menuClick("manageDriver","manageDriver")}}})});
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();console.log(e)});
 </script>
 {{{{/raw-helper}}}}
