--- a/templates/dashboard/pages/manageDriver/manageDriver.html
+++ b/templates/dashboard/pages/manageDriver/manageDriver.html
@@ -2,8 +2,65 @@
 {{{{/raw-helper}}}}
 {{> header}}
 <div class='manage-driver'>
-    <div class='manage-driver-content'>
+    <div class='manage-drivers-content'>
     </div>
 </div> 
 {{{{raw-helper}}}}
+<script id="grid-row-template-details" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">
+        <div class="col-sm-12 grid-row-container">
+        		
+
+			 <div class="panel panel-info">
+                            <!-- <div class="panel-heading">
+                              <h3 class="panel-title">Employee Details</h3>
+                            </div> -->
+                            <div class="panel-body">
+                      
+                             
+                              <div class="row">
+                                 <div class="col-md-3 col-lg-3 " align="center"> 
+
+                                  <img alt="User Pic" src="/img/default_image.png" class="img-circle img-responsive">
+  
+                              </div> 
+
+                                         <div class="col-md-5 col-lg-5 "> 
+                                                  <table class="table table-user-information">
+                                                    <tbody>
+                                                      <tr>
+                                                        <td>Full Name:</td>
+                                                        <td>{{firstname}} {{lastname}}</td>
+                                                       </tr>
+                                                                          
+                                                      <tr>
+                                                        <td>Mobile:</td>                                              
+                                                        <td>{{contact.mobile}}</td>
+                                                      </tr>
+                                                    
+                                                       <tr>
+                                                        <td>Email:</td>
+                                                        <td>{{contact.email}}</td>
+                                                      </tr>
+
+                                                      <tr>
+                                                        <td>Address:</td>
+                                                        <td>{{address.organisation}} {{address.street}}
+                                                        {{address.city}} {{address.state}}</td>
+                                                      </tr>
+
+                                                    </tbody>
+                                                  </table>
+                      
+                                        </div>
+                               </div>
+						</div>
+
+				</div>		
+
+        </div>
+    </div>
+  </div>
+</script>        
 {{{{/raw-helper}}}}
