--- a/templates/main/partials/navbar.html
+++ b/templates/main/partials/navbar.html
@@ -9,7 +9,7 @@
             <ul class="nav navbar-nav float-md-right">
                 {{#if loggedIn}}
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="/dashboard.html">Dashboard</a>
+                        <a class="nav-link" href="/dashboard.html">Dashboard</a>
                     </li>
                 {{/if}}
                 <li class="nav-item">
