--- a/templates/dashboard/pages/manageTruck.html
+++ b/templates/dashboard/pages/manageTruck.html
@@ -1,11 +1,50 @@
 {{{{raw-helper}}}}
 {{{{/raw-helper}}}}
+{{{{raw-helper}}}}
+{{{{/raw-helper}}}}
 {{> header}}
 <div class='manage-trucks'>
-    Manage Trucks
     <div class='manage-trucks-content'>
-            Manage Trucks Content
     </div>
 </div> 
 {{{{raw-helper}}}}
+<script id="grid-row-template-details" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">
+        <div class="col-sm-12 grid-row-container">
+           			<!-- <div class="col-md-5 col-lg-5 ">  -->
+                          <table class="table table-hover">
+                           <thead>
+					           <tr>
+						            <th>PlateNumber</th>
+						            <th>Model</th>
+						            <th>EngineNumber</th>
+						            <th>TruckType</th>
+						            <th>Capacity</th>
+						            <th>Status</th>
+						            <th>Action</th>
+					        	</tr>
+                           </thead>
+                            <tbody>
+                              <tr>                                
+                                <td>{{plateNumber}}</td>
+                                <td>{{model}}</td>                              
+                                <td>{{engineNumber}}</td>                              
+                                <td>{{truckType}}</td>
+                                <td>{{capacity}}</td>
+                                <td>{{staus}}</td>
+                                  <td class="text-center"><a class='btn btn-info btn-sm' href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a> <a href="#" class="btn btn-info btn-sm edit-truck" _id="{{_id}}"><span class="glyphicon glyphicon-info-sign"></span> View</a></td>
+                              </tr>
+                            </tbody>
+                          </table>
+                    <!-- </div> -->
+        </div>
+    </div>
+  </div>
+</script>
+{{{{/raw-helper}}}}
+{{{{raw-helper}}}}
+<script type="text/javascript">
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();new GRID_HELPER.GRID(".manage-trucks-content",{gridData:e,gridId:"gridManageTrucks",rowConfig:{template:"grid-row-template-details",optionsPostRender:function(e,t){console.log(t),$(e).find(".edit-truck").click(function(){MENU_HELPER.menuClick("addTruck","manageTruck",{extraHref:t._id})})}}})});
+</script>
 {{{{/raw-helper}}}}
