--- a/templates/dashboard/pages/manageTruck/manageTruck.html
+++ b/templates/dashboard/pages/manageTruck/manageTruck.html
@@ -1,7 +1,47 @@
+{{{{raw-helper}}}}
+{{{{/raw-helper}}}}
 {{> header}}
 <div class='manage-trucks'>
-    Manage Trucks
+
     <div class='manage-trucks-content'>
-            Manage Trucks Content
+            
     </div>
 </div> 
+{{{{raw-helper}}}}
+<script id="grid-row-template-details" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">
+        <div class="col-sm-12 grid-row-container">
+           			<!-- <div class="col-md-5 col-lg-5 ">  -->
+                          <table class="table table-hover">
+                           <thead>
+					           <tr>
+						            <th>PlateNumber</th>
+						            <th>Model</th>
+						            <th>EngineNumber</th>
+						            <th>TruckType</th>
+						            <th>Capacity</th>
+						            <th>Status</th>
+						            <th>Action</th>
+					        	</tr>
+                           </thead>
+                            <tbody>
+                              <tr>                                
+                                <td>{{plateNumber}}</td>
+                                <td>{{model}}</td>                              
+                                <td>{{engineNumber}}</td>                              
+                                <td>{{truckType}}</td>
+                                <td>{{capacity}}</td>
+                                <td>{{staus}}</td>
+                                  <td class="text-center"><a class='btn btn-info btn-sm' href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a> <a href="#" class="btn btn-info btn-sm edit-truck" _id="{{_id}}"><span class="glyphicon glyphicon-info-sign"></span> View</a></td>
+                              </tr>
+                            </tbody>
+                          </table>
+                      
+                    <!-- </div> -->
+        </div>
+    </div>
+    
+  </div>
+</script>
+{{{{/raw-helper}}}}
