--- a/templates/dashboard/pages/manageTruck/manageTruck.html
+++ b/templates/dashboard/pages/manageTruck/manageTruck.html
@@ -11,37 +11,54 @@
 <script id="grid-row-template-details" type="text/x-handlebars-template">
   <div class="container-fluid">
     <div class="row grid-row">
-        <div class="col-sm-12 grid-row-container">
-           			<!-- <div class="col-md-5 col-lg-5 ">  -->
-                          <table class="table table-hover">
-                           <thead>
-					           <tr>
-						            <th>PlateNumber</th>
-						            <th>Model</th>
-						            <th>EngineNumber</th>
-						            <th>TruckType</th>
-						            <th>Capacity</th>
-						            <th>Status</th>
-						            <th>Action</th>
-					        	</tr>
-                           </thead>
-                            <tbody>
-                              <tr>                                
-                                <td>{{plateNumber}}</td>
-                                <td>{{model}}</td>                              
-                                <td>{{engineNumber}}</td>                              
-                                <td>{{truckType}}</td>
-                                <td>{{capacity}}</td>
-                                <td>{{staus}}</td>
-                                  <td class="text-center"><a class='btn btn-info btn-sm' href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a> <a href="#" class="btn btn-info btn-sm edit-truck" _id="{{_id}}"><span class="glyphicon glyphicon-info-sign"></span> View</a></td>
-                              </tr>
-                            </tbody>
-                          </table>
-                      
-                    <!-- </div> -->
+
+
+         <div class="col-md-3 col-lg-3 " align="center"> 
+           <img alt="Truck Pic" height="150" width="150" src="/img/noimage.png" class="img-circle img-responsive">
+        </div> 
+        <div class="col-md-5">
+          
+             <div class="row">
+               <div class="col-md-5"><dt>Plate Number </dt></div> <div class="col-md-3">{{plateNumber}}</div>
+             </div>
+
+             <div class="row">
+               <div class="col-md-5"><dt>Model  </dt></div> <div class="col-md-4">{{model}}</div>
+             </div>
+
+             <div class="row">
+               <div class="col-md-5"><dt>EngineNumber </dt> </div> <div class="col-md-4">{{engineNumber}}</div>
+             </div>
+
+             <div class="row">
+               <div class="col-md-5"><dt>TruckType </dt> </div><div class="col-md-4">{{truckType}}</div>
+             </div>
+            
+             <div class="row">
+               <div class="col-md-5"><dt>Capacity </dt> </div><div class="col-md-4">{{capacity}}</div>
+             </div>
+
+              <div class="row">
+               <div class="col-md-5 "><dt>Status </dt> </div><div class="col-md-4">{{staus}}</div>
+             </div>
         </div>
+
+           		
     </div>
     
   </div>
 </script>
+
+<script id="grid-row-options-template" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">       
+        <div class="col-sm-12">
+            <div class="pull-right">
+                <button type="button" class="btn btn-default btn-primary edit-truck" _id="{{_id}}">Edit</button>
+            </div>
+        </div>       
+    </div>
+  </div>
+</script>
+
 {{{{/raw-helper}}}}
