manageusers and somefixes

--- a/templates/dashboard/pages/addUser.html
+++ b/templates/dashboard/pages/addUser.html
@@ -7,6 +7,6 @@
 </div> 
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".new-users-content",e,{postUrl:"users/form",callbacks:{afterSubmit:function(){MENU_HELPER.menuClick("manageUser","manageUser")}}})});
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".new-users-content",e,{postUrl:"users/form",callbacks:{afterSubmit:function(){MENU_HELPER.menuClick("manageUsers","manageUsers")}}})});
 </script>
 {{{{/raw-helper}}}}
