--- a/templates/main/partials/auth.html
+++ b/templates/main/partials/auth.html
@@ -1,5 +1,6 @@
   <!-- Login Section -->
     <section id="auth">
+        {{#unless loggedIn}}
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
@@ -26,4 +27,5 @@
                 </div>
             </div>
         </div>
+        {{/unless}}
     </section>
