add truck and manage truck

--- a/templates/dashboard/pages/manageTruck/manageTruck.html
+++ b/templates/dashboard/pages/manageTruck/manageTruck.html
@@ -26,20 +26,17 @@
                <div class="col-md-5"><dt>Model  </dt></div> <div class="col-md-4">{{model}}</div>
              </div>
 
-             <div class="row">
-               <div class="col-md-5"><dt>EngineNumber </dt> </div> <div class="col-md-4">{{engineNumber}}</div>
-             </div>
 
              <div class="row">
                <div class="col-md-5"><dt>TruckType </dt> </div><div class="col-md-4">{{truckType}}</div>
              </div>
             
              <div class="row">
-               <div class="col-md-5"><dt>Capacity </dt> </div><div class="col-md-4">{{capacity}}</div>
+               <div class="col-md-5"><dt>Capacity </dt> </div><div class="col-md-4">{{capacity}} {{ capacityUnits}}</div>
              </div>
 
               <div class="row">
-               <div class="col-md-5 "><dt>Status </dt> </div><div class="col-md-4">{{staus}}</div>
+               <div class="col-md-5 "><dt>Status </dt> </div><div class="col-md-4">{{status}}</div>
              </div>
         </div>
 
