--- a/less/dashboard/style.less
+++ b/less/dashboard/style.less
@@ -427,6 +427,10 @@ ul.alert-dropdown {
     &-suffix {
         font-size: 10px;
     }
+    &-recordinfo {
+        font-size: 14px;
+        text-align: center;
+    }
     &-button {
         font-size: 30px;
         margin-top: 15px;
