--- a/templates/dashboard/partials/pager.html
+++ b/templates/dashboard/partials/pager.html
@@ -1,8 +1,17 @@
 <div class="pager">
-    <i class="fa fa-angle-left pager-button pager-button-prev" aria-hidden="true"></i>
-    <span> <input type="text" value="1" class="pager-textbox"  pattern="^[0-9]*(\.[0-9]+)?"/> </span>
-    <span class="pager-slash"> / </span>
-    <span class="pager-total"> {{pageCount}} <span class="pager-suffix">pages</span> </span>
-    <span class="glyphicons glyphicons-chevron-right"></span>
-    <i class="fa fa-angle-right pager-button pager-button-next" aria-hidden="true"></i>
+    <div class="row">
+        <div class="col-sm-12">
+            <i class="fa fa-angle-left pager-button pager-button-prev" aria-hidden="true"></i>
+            <span> <input type="text" value="1" class="pager-textbox"  pattern="^[0-9]*(\.[0-9]+)?"/> </span>
+            <span class="pager-slash"> / </span>
+            <span class="pager-total"> {{pageCount}} <span class="pager-suffix">pages</span> </span>
+            <span class="glyphicons glyphicons-chevron-right"></span>
+            <i class="fa fa-angle-right pager-button pager-button-next" aria-hidden="true"></i>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 pager-recordinfo">
+            Displaying <b>{{displayStart}}</b> to <b>{{displayEnd}}</b> of <b>{{total}}</b> entries
+        </div>
+    </div>
 </div>
