--- a/templates/dashboard/pages/uploadfiles/uploadfiles.html
+++ b/templates/dashboard/pages/uploadfiles/uploadfiles.html
@@ -4,11 +4,6 @@
 
 <!--   action = 'http://localhost:5000/api/uploadfiles/service/uploadfiles' -->
 
-    <!--  <table class="table table-bordered table-hover">
-    <tbody class='upload-files-content'>
-    </tbody>
-       </table>  -->
-
     </div>
     <div>
     	  <form action="" id="myform">
@@ -35,11 +30,11 @@
        </div>
        <div class="col-sm-2">
           <button type="button" class="btn btn-default" aria-label="Left Align" id="actiondelete">
-           <span class="fa fa-trash-o fa-lg" aria-hidden="true"></span>
+           <span class="fa fa-trash-o fa-lg" aria-hidden="true" id="actiondelete"></span>
        </button>
      
         <button type="button" class="btn btn-default" aria-label="Left Align" id="actiondownload">
-           <span class="fa fa-download fa-lg" aria-hidden="true"></span>
+           <span class="fa fa-download fa-lg" aria-hidden="true" id="actiondelete"></span>
        </button>
        </div>
 
