--- a/templates/dashboard/pages/uploadfiles.html
+++ b/templates/dashboard/pages/uploadfiles.html
@@ -7,8 +7,15 @@
 <div class='upload-files'>
     <div class='upload-files-content'>
     </div>
-    <div>
+    <div class="form-group">
     	  <form action="" id="myform">
+             <select class="form-control" id="typeofdocument">
+              <option>License</option>
+              <option>Photo</option>
+              <option>Load doc</option>
+              <option>Unload doc</option>
+              <option>Other doc</option>
+            </select>
        			<input type="file" id="keyName" class="file" name="photos" multiple/>
        			<input type='submit' value='Upload' />
    		</form>  
