--- a/templates/dashboard/pages/uploadfiles/uploadfiles.html
+++ b/templates/dashboard/pages/uploadfiles/uploadfiles.html
@@ -5,8 +5,17 @@
 <!--   action = 'http://localhost:5000/api/uploadfiles/service/uploadfiles' -->
 
     </div>
-    <div>
+    <div class="form-group">
     	  <form action="" id="myform">
+        
+             <select class="form-control" id="typeofdocument">
+              <option>License</option>
+              <option>Photo</option>
+              <option>Load doc</option>
+              <option>Unload doc</option>
+              <option>Other doc</option>
+            </select>
+
        			<input type="file" id="keyName" class="file" name="photos" multiple/>
        			<input type='submit' value='Upload' />
    		</form>  
