setDriver,runningTrucks, manageTrucks changes

--- a/templates/dashboard/pages/addDriver.html
+++ b/templates/dashboard/pages/addDriver.html
@@ -11,6 +11,6 @@
 {{{{/raw-helper}}}}
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".new-driver-content",e,{postUrl:"drivers/service/addDriver",callbacks:{afterSubmit:function(){MENU_HELPER.menuClick("addDriver","addDriver")}}})});
+    console.log("template data",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".new-driver-content",e,{postUrl:"drivers/service/addDriver",callbacks:{afterSubmit:function(){MENU_HELPER.menuClick("manageDriver","manageDriver")}}})});
 </script>
 {{{{/raw-helper}}}}
