--- a/templates/dashboard/pages/manageDriver/manageDriver.html
+++ b/templates/dashboard/pages/manageDriver/manageDriver.html
@@ -63,4 +63,20 @@
     </div>
   </div>
 </script>        
+
+
+<script id="grid-row-options-template" type="text/x-handlebars-template">
+  <div class="container-fluid">
+    <div class="row grid-row">       
+        <div class="col-sm-12">
+            <div class="pull-right">
+                <button type="button" class="btn btn-default btn-primary edit-driver" _id="{{_id}}">Edit</button>
+
+                <button type="button" class="btn btn-default btn-primary upload-doc-driver" _id="{{_id}}">Upload docs</button>
+            </div>
+        </div>       
+    </div>
+  </div>
+</script>
+
 {{{{/raw-helper}}}}
