--- a/templates/dashboard/pages/manageTruck/manageTruck.html
+++ b/templates/dashboard/pages/manageTruck/manageTruck.html
@@ -52,6 +52,10 @@
         <div class="col-sm-12">
             <div class="pull-right">
                 <button type="button" class="btn btn-default btn-primary edit-truck" _id="{{_id}}">Edit</button>
+
+                <button type="button" class="btn btn-default btn-primary upload-doc-truck" _id="{{_id}}">Upload docs</button>
+
+                 <button type="button" class="btn btn-default btn-primary assign-driver" _id="{{_id}}">Assign Driver</button>
             </div>
         </div>       
     </div>
